pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints11.pkl
local list = List(1)

foo: Dynamic(this == new Dynamic { for (elem in list) { elem + 1 } })

